# advent-of-code

./: 1.ml  README.md  tutorial.ml
2020/: test.t
2020/aoc1/: Cargo.toml
2020/aoc1/src/: main.rs
2020/aoc10/: Cargo.toml
2020/aoc10/src/: main.rs
2020/aoc11/: Cargo.toml
2020/aoc11/src/: main.rs
2020/aoc12/: Cargo.toml
2020/aoc12/src/: main.rs
2020/aoc13/: Cargo.toml
2020/aoc15/: Cargo.toml
2020/aoc15/src/: main.rs
2020/aoc16/: Cargo.toml
2020/aoc16/src/: main.rs
2020/aoc18/: Cargo.toml
2020/aoc18/src/: main.rs
2020/aoc19/: Cargo.toml
2020/aoc19/src/: main.rs
2020/aoc2/: Cargo.toml
2020/aoc2/src/: main.rs
2020/aoc20/: Cargo.toml
2020/aoc20/src/: main.rs
2020/aoc21/: Cargo.toml
2020/aoc21/src/: main.rs
2020/aoc3/: Cargo.toml
2020/aoc3/src/: main.rs
2020/aoc4/: Cargo.toml
2020/aoc4/src/: main.rs
2020/aoc5/: Cargo.toml
2020/aoc5/src/: main.rs
2020/aoc6/: Cargo.toml
2020/aoc6/src/: main.rs
2020/aoc7/: Cargo.toml
2020/aoc7/src/: main.rs
2020/aoc8/: Cargo.toml
2020/aoc8/src/: main.rs
2020/aoc9/: Cargo.toml
2020/aoc9/benches/: my_benchmark.rs
2020/aoc9/src/: lib.rs  main.rs
2021/aoc1/parsing/: lpeg.ml  utils.ml
2021/aoc2/: Cargo.toml
2021/aoc2/src/: main.rs
2021/aoc3/: Cargo.toml
2021/aoc3/src/: main.rs
2021/aoc4/: Cargo.toml
2021/aoc4/src/: main.rs
2021/aoc5/: Cargo.toml
2021/aoc5/src/: main.rs
2021/aoc6/: Cargo.toml
2021/aoc6/src/: main.rs
