[package]
name = "aoc9"
version = "0.1.0"
authors = ["Erik McClure <erikm@fundament.software>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3